# LinuxLab

./: 0002-formatting-use-tabs-instead-of-spaces.patch  calculator.cpp  calculator.h
LinuxLab1/: 0001-fix-truncation-error.patch
LinuxLab2/: CMakeLists.txt  Makefile  build.ninja  rules.ninja
LinuxLab2/include/: temperament.h
LinuxLab2/src/: main.cpp  temperament.cpp
LinuxLab3/: script.sh
